
 * src/tools.c, src/utils.c:
   Applied patch from Jeff Pohlmeyer to improve the custom command
   execution code(thanks).
 * src/sciwrappers.c, src/sciwrappers.h:
   Added sci_get_selection_mode(), sci_set_selection_mode(),
   sci_get_pos_at_line_sel_start(), sci_get_pos_at_line_sel_end().
 * src/document.c:
   Improved replacing in rectangle selections (closes #1665571).
   

2007-02-28  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/msgwindow.c, src/msgwindow.h, src/search.c:
   Show number of matches when using Find All or Find in Files.
   Add msgwin_msg_add_fmt().
 * src/build.c:
   Make build_spawn_cmd() take a command string instead of joining an
   array of strings.


2007-02-27  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/filetypes.c:
   Use utils_strv_new() for all filetype patterns.


2007-02-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/tools.c: Fixed wrong sensitiveness of custom commands menu items.
 * configure.in, THANKS:
   Applied patch from Slava Semushin to improve SVN checks (thank you).


2007-02-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, doc/geany.docbook, src/geany.h, src/interface.c,
   src/keybindings.c, src/keybindings.h, src/keyfile.c, src/main.c,
   src/tools.c, src/tools.h:
   Added custom commands to send selected text through some definable
   commands and replace the selection with the output.
 * data/filetype_extensions.conf, src/filetypes.c:
   Added *.pod to Perl file patterns.
 * src/sci_cb.c: Auto complete multi line comments only when auto
                 completion of constructs is enabled.


2007-02-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c:
   Prevent undefined behaviour when using the Stop command that can kill
   X when Geany is run from the KDE or Xfce menu (not from a terminal).
   Should close #1668017.


2007-02-24  Enrico Tröger  <enrico.troeger@uvena.de>

 * configure.in, Makefile.am, README.I18N, po/intl_stats.sh, po/LINGUAS: