@@ -15,6 +15,9 @@
    sci_get_pos_at_line_sel_start(), sci_get_pos_at_line_sel_end().
  * src/document.c:
    Improved replacing in rectangle selections (closes #1665571).
+ * src/build.c, src/tools.c, src/utils.c, src/utils.h:
+   Set IO channels for custom commands to blocking mode
+   (thanks to Jeff Pohlmeyer).
    
 
 2007-02-28  Nick Treleaven  <nick.treleaven@btinternet.com>
